# homelab

./: .gitignore  README.adoc  containers_list.yml  pyproject.toml
homelab/: main.py
